--- a/webroot/css/ss/ssMetrics.css
+++ b/webroot/css/ss/ssMetrics.css
@@ -1,87 +1,3 @@
-/* .w100{
-	width:100%;
-}
-.w98{
-	width:98%;
-}
-.w95{
-	width:95%;
-}
-.w90{
-	width:90%
-}
-.w88{
-	width:88%;
-}
-.w85{
-	width:85%;
-}
-.w80{
-	width:80%;
-}
-.w75{
-	width:75%;
-}
-.w70{
-	width:70%;
-}
-.w65{
-	width:65%;
-}
-.w63{
-	width:63%;
-}
-.w60{
-	width:60%;
-}
-.w55{
-	width:55%;
-}
-.w50{
-	width:50%;
-}
-.w45{
-	width:45%;
-}
-.w40{
-	width:40%;
-}
-
-.w38{
-	width:38%;
-}
-.w37{
-	width:37%;
-}
-.w35{
-	width:35%;
-}
-.w30{
-	width:30%;
-}
-.w25{
-	width:25%;
-}
-.w20{
-	width:20%;
-}
-.w15{
-	width:15%;
-}
-.w13{
-	width:12%;
-}
-.w10{
-	width:10%;
-}
-.w5{
-	width:5%;
-}
-
-
- */
-
-
 .h100{
 	height:100%;
 }
@@ -154,96 +70,97 @@
 .w99{width:99% !important;}
 .w98{width:98% !important;}
 .w97{width:97% !important;}
-.w96{width:96%;}
-.w95{width:95%;}
-.w94{width:94%;}
+.w96{width:96% !important}
+.w95{width:95% !important}
+.w94{width:94% !important}
 .w93{width:93% !important;}
-.w92{width:92%;}
-.w91{width:91%;}
-.w90{width:90%;}
-.w89{width:89%;}
-.w88{width:88%;}
-.w87{width:87%;}
-.w86{width:86%;}
-.w85{width:85%;}
-.w84{width:84%;}
-.w83{width:83%;}
-.w82{width:82%;}
-.w81{width:81%;}
-.w80{width:80%;}
-.w79{width:79%;}
-.w78{width:78%;}
-.w77{width:77%;}
-.w76{width:76%;}
-.w75{width:75%;}
-.w74{width:74%;}
-.w73{width:73%;}
-.w72{width:72%;}
-.w71{width:71%;}
-.w70{width:70%;}
-.w69{width:69%;}
-.w68{width:68%;}
-.w67{width:67%;}
-.w66{width:66%;}
-.w65{width:65%;}
-.w64{width:64%;}
-.w63{width:63%;}
-.w62{width:62%;}
-.w61{width:61%;}
-.w60{width:60%;}
-.w59{width:59%;}
-.w58{width:58%;}
-.w57{width:57%;}
-.w56{width:56%;}
-.w55{width:55%;}
-.w54{width:54%;}
-.w53{width:53%;}
-.w52{width:52%;}
-.w51{width:51%;}
+.w92{width:92% !important}
+.w91{width:91% !important}
+.w90{width:90% !important}
+.w89{width:89% !important}
+.w88{width:88% !important}
+.w87{width:87% !important}
+.w86{width:86% !important}
+.w85{width:85% !important}
+.w84{width:84% !important}
+.w83{width:83% !important}
+.w82{width:82% !important}
+.w81{width:81% !important}
+.w80{width:80% !important}
+.w79{width:79% !important}
+.w78{width:78% !important}
+.w77{width:77% !important}
+.w76{width:76% !important}
+.w75{width:75% !important}
+.w74{width:74% !important}
+.w73{width:73% !important}
+.w72{width:72% !important}
+.w71{width:71% !important}
+.w70{width:70% !important}
+.w69{width:69% !important}
+.w68{width:68% !important}
+.w67{width:67% !important}
+.w66{width:66% !important}
+.w65{width:65% !important}
+.w64{width:64% !important}
+.w63{width:63% !important}
+.w62{width:62% !important}
+.w61{width:61% !important}
+.w60{width:60% !important}
+.w59{width:59% !important}
+.w58{width:58% !important}
+.w57{width:57% !important}
+.w56{width:56% !important}
+.w55{width:55% !important}
+.w54{width:54% !important}
+.w53{width:53% !important}
+.w52{width:52% !important}
+.w51{width:51% !important}
 .w50{width:50% !important;}
-.w49{width:49%;}
-.w48{width:48%;}
+.w49{width:49% !important}
+.w48{width:48% !important}
 .w47{width:47% !important;}
 .w46{width:46% !important;}
-.w45{width:45%;}
-.w40{width:40%;}
+.w45{width:45% !important}
+.w40{width:40% !important}
 .w39{width:39% !important;}
-.w38{width:38%;}
-.w37{width:37%;}
-.w36{width:36%;}
-.w35{width:35%;}
-.w34{width:34%;}
-.w33{width:33%;}
-.w32{width:32%;}
-.w31{width:31%;}
-.w30{width:30%;}
-.w29{width:29%;}
-.w28{width:28%;}
-.w27{width:27%;}
-.w26{width:26%;}
+.w38{width:38% !important}
+.w37{width:37% !important}
+.w36{width:36% !important}
+.w35{width:35% !important}
+.w34{width:34% !important}
+.w33{width:33% !important}
+.w32{width:32% !important}
+.w31{width:31% !important}
+.w30{width:30% !important}
+.w29{width:29% !important}
+.w28{width:28% !important}
+.w27{width:27% !important}
+.w26{width:26% !important}
 .w25{width:25% !important;}
 .w24{width:24% !important}
-.w23{width:23%;}
-.w22{width:22%;}
-.w21{width:21%;}
-.w20{width:20%;}
-.w19{width:19%;}
-.w18{width:18%;}
-.w17{width:17%;}
-.w16{width:16%;}
-.w15{width:15%;}
-.w14{width:14%;}
-.w13{width:13%;}
-.w12{width:12%;}
-.w11{width:11%;}
-.w10{width:10%;}
-.w9{width:9%;}
-.w8{width:8%;}
-.w7{width:7%;}
-.w6{width:6%;}
-.w5{width:5%;}
-.w4{width:4%;}
-.w3{width:3%;}
-.w2{width:2%;}
-.w1{width:1%;}
+.w23{width:23% !important}
+.w22{width:22% !important}
+.w21{width:21% !important}
+.w20{width:20% !important}
+.w19{width:19% !important}
+.w18{width:18% !important}
+.w17{width:17% !important}
+.w16{width:16% !important}
+.w15{width:15% !important}
+.w14{width:14% !important}
+.w13{width:13% !important}
+.w12{width:12% !important}
+.w11{width:11% !important}
+.w10{width:10% !important}
+.w9{width:9% !important}
+.w8{width:8% !important}
+.w7{width:7% !important}
+.w6{width:6% !important}
+.w5{width:5% !important}
+.w4{width:4% !important}
+.w3{width:3% !important}
+.w2{width:2% !important}
+.w1{width:1% !important}
+.w0{width:0% !important}
 
