--- a/webroot/css/ss/ssInterface.css
+++ b/webroot/css/ss/ssInterface.css
@@ -114,11 +114,17 @@
 .pRight{
 	padding-right: 3px !important;
 }
+.pR13{
+	padding-right: 13px !important;
+}
 .pBottom{
 	padding-bottom: 3px !important;
 }
 .pTop{
 	padding-top: 3px !important;
+}
+.noPadding{
+	padding: 0px !important;
 }
 .npLeft{
 	padding-left: 0px !important;
@@ -137,6 +143,9 @@
 }
 .padLeft{
 	padding-left:10px !important;
+}
+.pLeft15px{
+	padding-left:15px !important;
 }
 .fs10{
 	font-size:10px !important;
@@ -162,6 +171,9 @@
 .mtop{
 	margin-top:3px;
 }
+.mLeft10px{
+	margin-left: 10px !important;
+}
 .negativeMarginLeft60{
 	margin-left: -60px !important;
 }
@@ -176,4 +188,15 @@
 }
 .showLnBlk{
 	display:inline-block;
+}
+
+/*Text Align*/
+.text-left{
+	text-align:left;
+}
+.text-right{
+	text-align:right;
+}
+.text-center{
+	text-align:center;
 }
