--- a/webroot/css/ss/ssMetrics.css
+++ b/webroot/css/ss/ssMetrics.css
@@ -122,6 +122,10 @@
 .w47{width:47% !important;}
 .w46{width:46% !important;}
 .w45{width:45% !important}
+.w44{width:44% !important}
+.w43{width:43% !important}
+.w42{width:42% !important}
+.w41{width:41% !important}
 .w40{width:40% !important}
 .w39{width:39% !important;}
 .w38{width:38% !important}
